--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script src="TacoColorLib.js"></script>
 <script src="LineAxisHelper.js"></script>
 
-<style href="main.css" type="text/css"></style>
+<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
